--- a/app/src/components/election-status/Election.css
+++ b/app/src/components/election-status/Election.css
@@ -1,5 +1,6 @@
 .election-wrapper{
     padding-left: 3%;
+    background-color : rgb(27, 35, 43);
   }
   
   .election-btn{
